examples/valid/08_struct_forwarding.lane
module Examples.Valid08

import Basic.Io.{Io, Write}

import Basic.Ops.*

pub struct Meter {
  value : Int
}

pub fn meter_equal(a : Meter, b : Meter) -> Bool {
  a.value == b.value
}

pub struct MeterOps {
  offer equal_impl : Equal[Meter]
}

pub let meter_equal_ops : Equal[Meter] = Equal::{
  equal: meter_equal,
  not_equal: fn (a : Meter, b : Meter) -> Bool {
    if meter_equal(a, b) {
      false
    } else {
      true
    }
  }
}

pub offer meter_ops : MeterOps = MeterOps::{ equal_impl: meter_equal_ops }

pub fn use_forwarded_field() -> Int {
  if Meter::{ value: 1 } == Meter::{ value: 1 } {
    1
  } else {
    0
  }
}

pub fn answer() -> Unit ! Io {
  if use_forwarded_field() == 1 {
    Write::println!("forwarded equality=1")
  } else {
    Write::println!("bad:forwarded equality=1")
  }
}
